Closed
Bug 1808945
Opened 3 years ago
Closed 3 years ago
Intermittent netwerk/test/unit/test_webtransport_simple.js | single tracking bug
Categories
(Core :: Networking, defect, P5)
Core
Networking
Tracking
()
RESOLVED
FIXED
111 Branch
Tracking | Status | |
---|---|---|
firefox111 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: kershaw)
References
Details
(Keywords: intermittent-failure, intermittent-testcase, Whiteboard: [necko-monitor])
Attachments
(1 file)
Filed by: sstanca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=401595417&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/XpeWM4NxTIqnJpfylJOGig/runs/0/artifacts/public/logs/live_backing.log
[task 2023-01-06T16:07:42.153Z] 16:07:42 INFO - TEST-PASS | uriloader/exthandler/tests/unit/test_punycodeURIs.js | took 1168ms
[task 2023-01-06T16:07:42.160Z] 16:07:42 INFO - Retrying tests that failed when run in parallel.
[task 2023-01-06T16:07:42.162Z] 16:07:42 INFO - TEST-START | netwerk/test/unit/test_webtransport_simple.js
[task 2023-01-06T16:12:42.177Z] 16:12:42 WARNING - TEST-UNEXPECTED-TIMEOUT | netwerk/test/unit/test_webtransport_simple.js | Test timed out
[task 2023-01-06T16:12:42.178Z] 16:12:42 INFO - TEST-INFO took 300015ms
[task 2023-01-06T16:12:42.178Z] 16:12:42 INFO - >>>>>>>
[task 2023-01-06T16:12:42.178Z] 16:12:42 INFO - (xpcshell/head.js) | test MAIN run_test pending (1)
[task 2023-01-06T16:12:42.178Z] 16:12:42 INFO - (xpcshell/head.js) | test run_next_test 0 pending (2)
[task 2023-01-06T16:12:42.178Z] 16:12:42 INFO - (xpcshell/head.js) | test MAIN run_test finished (2)
[task 2023-01-06T16:12:42.179Z] 16:12:42 INFO - running event loop
[task 2023-01-06T16:12:42.179Z] 16:12:42 INFO - netwerk/test/unit/test_webtransport_simple.js | Starting setup
[task 2023-01-06T16:12:42.179Z] 16:12:42 INFO - (xpcshell/head.js) | test setup pending (2)
[task 2023-01-06T16:12:42.179Z] 16:12:42 INFO - TEST-PASS | netwerk/test/unit/test_webtransport_simple.js | setup - [setup : 26] "49209" != null
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 6•3 years ago
|
||
[task 2023-02-03T21:09:08.170Z] 21:09:08 INFO - netwerk/test/unit/test_webtransport_simple.js | Starting test_connect_wt
[task 2023-02-03T21:09:08.171Z] 21:09:08 INFO - (xpcshell/head.js) | test test_connect_wt pending (2)
[task 2023-02-03T21:09:08.172Z] 21:09:08 INFO - (xpcshell/head.js) | test run_next_test 2 finished (2)
[task 2023-02-03T21:09:08.174Z] 21:09:08 INFO - "Error: 0 reason: "
[task 2023-02-03T21:09:08.175Z] 21:09:08 INFO - <<<<<<<
We timeout in test_connect_wt.
Kershaw, do you know if there's an easy fix for this?
Flags: needinfo?(kershaw)
Assignee | ||
Comment 7•3 years ago
|
||
I think the problem is that we sometimes doesn't put a webtransport session into mWaitingForWebTransportNegotiation list.
I'll submit a patch for this.
Flags: needinfo?(kershaw)
Assignee | ||
Comment 8•3 years ago
|
||
Updated•3 years ago
|
Assignee: nobody → kershaw
Status: NEW → ASSIGNED
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/83ff1b06372e
Make sure we call CreateWebTransport after negotiation is done, r=necko-reviewers,valentin
Comment 10•3 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox111:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•