Bug 1808945 - Make sure we call CreateWebTransport after negotiation is done, r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D169217